Some minor changes and fixes

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -13,10 +13,11 @@
             padding: 0;
             background-color: #f9f9f9;
             color: #333;
+            min-width: 400px;
         }
 
         header {
-            background-color: #0074d9;
+            background-color: #0e1117;
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -78,7 +79,7 @@
             margin-top: 5px;
             text-decoration: none;
             color: #fff;
-            background-color: #0074d9;
+            background-color: #0e1117;
             padding: 5px 10px;
             border-radius: 3px;
             font-size: 0.9rem;
@@ -94,6 +95,10 @@
             background-color: #f1f1f1;
             font-size: 0.8rem;
         }
+
+        table, th, td {
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -102,7 +107,13 @@
     </header>
 
     <div id="results-container">
-        Found cheaper prices, loading...
+        <a href="https://new.aldi.us/product/friendly-farms-whole-milk-0000000000001715">
+            <h3>Vitamin D Whole Milk (0.5 gal)</h3>
+            <p>Price: $ 1.3</p>
+            <p>Effective: $ 2.6 per gal</p>
+            <img src="" alt="Vitamin D Whole Milk" width="200" />
+            <img src="https://dm.cms.aldi.cx/is/image/prod1amer/product/jpg/scaleWidth/540/f00a0f8d-6ef1-4153-af9b-c727a25e703d/Whole%20%20Milk%201%20gal" height="12"/>
+        </a>
     </div>
 
     <footer>
