--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -107,13 +107,7 @@
     </header>
 
     <div id="results-container">
-        <a href="https://new.aldi.us/product/friendly-farms-whole-milk-0000000000001715">
-            <h3>Vitamin D Whole Milk (0.5 gal)</h3>
-            <p>Price: $ 1.3</p>
-            <p>Effective: $ 2.6 per gal</p>
-            <img src="" alt="Vitamin D Whole Milk" width="200" />
-            <img src="https://dm.cms.aldi.cx/is/image/prod1amer/product/jpg/scaleWidth/540/f00a0f8d-6ef1-4153-af9b-c727a25e703d/Whole%20%20Milk%201%20gal" height="12"/>
-        </a>
+        Found cheaper products, loading...
     </div>
 
     <footer>
